[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Objects/Sign.gd" type="Script" id=1]
[ext_resource path="res://GFX/textures/ukazatel.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Press_E.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 33.3407

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69.2593, 67.3386 )

[node name="ForestSign" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Press_E" parent="." instance=ExtResource( 5 )]
position = Vector2( 5.35144, -65.7037 )
frame = 4
[connection signal="body_entered" from="." to="." method="_on_ForestSign_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ForestSign_body_exited"]
